folder structure change and added basic food order overlay

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Order</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./src/index.css">
 </head>
 <body>
-<script src="/App.js"></script>
+    <div id="root">Failed to render!</div>
+<script type="module" src="/src/App.js"></script>
 </body>
 </html>
